changes for underg

--- a/undergraduate.html
+++ b/undergraduate.html
@@ -557,9 +557,6 @@ Apply									</a>
 							<div class="item">
 								<img width="210px" src="assets/img/clients2/CAC-RGB-W-L.jpg" alt="">
 							</div>
-							<div class="item">
-								<img class="img-responsive" src="assets/img/clients2/AACSB-International.png" alt="">
-						  </div>
 					  </div>
 					</div>
 					<!-- End Owl Carousel v1 -->
@@ -568,22 +565,21 @@ Apply									</a>
 								<div class="tab-pane fade in" id="messages-2">
 							  <div class="heading margin-bottom-10">
 						<h2>Education Curriculum</h2></div>
-								  <p>In the United States, students are required to complete a certain number of credit hours from the general education curriculum to broaden their knowledge in diverse areas such as English, Humanities and Fine Arts. Natural Sciences, Mathematics, History, Social and behavioral science.</p><p>Students will have the opportunity to choose from variety of general education courses, electives and major courses depending on the major they select.</p>
-									<p><a target="_blank"  href="http://www.jsu.edu/academicaffairs/advisement/general_studies.html">Click here for more information on the General Education curriculum</a> or <a target="_blank" href="http://www.jsu.edu/academicaffairs/advisement/General%20StudiesRev2015.pdf">Download here the checklist of generals studies</a></p>
+									<p>In the United States, students are required to complete a certain number of credit hours from the general education curriculum to broaden their knowledge in diverse areas such as English, Humanities and Fine Arts. Natural Sciences, Mathematics, History, Social and behavioral science.</p><p>Students will have the opportunity to choose from variety of general education courses, electives and major courses depending on the major they select.</p><p>For more information on the General Education Curriculum<a target="_blank"  href="http://www.jsu.edu/academicaffairs/advisement/general_studies.html"> Click here </a></p>
 								</div>
 					<!-- Featured Major -->			
 								<div class="tab-pane fade in" id="settings-2">
 		<!--=== Schools Gallery Part ===-->
 <div class="heading margin-bottom-10"><h2>JSU Undergraduate Schools</h2></div>		
-		<p>Also JSU offers six schools ... need extra text about the schools ??</p>
+		<p>Through our six undergraduate academic schools JSU’s mission is to provide distinctive educational, cultural and social experiences for a diverse student population. As a learning-centered university, Jacksonville State University strives to challenge students academically in a responsive environment, meeting students' educational, career and personal goals while seeking to produce broadly-educated graduates that are prepared for global engagement.</p>
+		<p>For complete degree listing, <a target="_blank" href="#">click here.</a></p>
 		<div class="col-sm-12">
 			<div class="row">
 				<div class="col-md-4">
 					<div class="">
 						<img class="img-responsive" src="assets/img/main/Arts.jpg" alt="" />
 						<div class="">
-							<h2>Arts & Humanities</h2>
-							<p>add description here</p>
+							<h4>Arts & Humanities</h4>
 							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
 						</div>
 					</div>
@@ -592,8 +588,7 @@ Apply									</a>
 					<div class="">
 						<img class="img-responsive" src="assets/img/main/business.jpg" alt="" />
 						<div class="mask">
-							<h2>Business & Industry</h2>
-							<p>add description here</p>
+							<h4>Business & Industry</h4>
 							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
 						</div>
 					</div>
@@ -602,8 +597,7 @@ Apply									</a>
 					<div class="">
 						<img class="img-responsive" src="assets/img/main/Education.jpg" alt="" />
 						<div class="mask">
-							<h2>Education</h2>
-							<p>add description here</p>
+							<h4>Education</h4>
 							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
 						</div>
 					</div>
@@ -615,8 +609,7 @@ Apply									</a>
 					<div class="">
 						<img class="img-responsive" src="assets/img/main/Science.jpg" alt="" />
 						<div class="mask">
-							<h2>Science</h2>
-							<p>add description here</p>
+							<h4>Science</h4>
 							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
 						</div>
 					</div>
@@ -625,8 +618,7 @@ Apply									</a>
 					<div class="">
 						<img class="img-responsive" src="assets/img/main/Human.jpg" alt="" />
 						<div class="mask">
-							<h2>Human Services & Social Sciences</h2>
-							<p>add description here</p>
+							<h4>Human Services & Social Sciences</h4>
 							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
 						</div>
 					</div>
@@ -635,8 +627,7 @@ Apply									</a>
 					<div class="">
 						<img class="img-responsive" src="assets/img/main/Health.jpg" alt="" />
 						<div class="mask">
-							<h2>Health Professions & Wellness</h2>
-							<p>add description here</p>
+							<h4>Health Professions & Wellness</h4>
 							<!-- future link to website school <a href="portfolio_old_item.html" class="info">Read More</a>-->
 						</div>
 					</div>
@@ -644,11 +635,11 @@ Apply									</a>
 			</div><!--/row-->
 		</div><!--/container-->
 		<!--=== End Content Part ===-->
-				<p>For complete degree listing, <a target="_blank" href="#">click here.</a></p>
 		<!--=== Featured Undergraduate Majors ===-->
 				<div class="heading margin-bottom-10">
-						<h2>Featured Majors</h2></div>
-							<p>Did you know that most popular majors among international students are offered at JSU such as business, computer science, mathematics, biology etc.?</p>
+						<h2>Popular Programs</h2></div>
+							<p>Did you know that most popular programs among international students are offered at JSU:
+									<ul><li>business</li><li>computer science</li><li>mathematics</li><li>biology</li></ul></p>
 						</div>
 								
 								
@@ -676,7 +667,7 @@ Apply									</a>
 						  <h3 class="panel-title"><em class="fa fa-tasks"></em> Basic Information for English Requirements</h3>
 						</div>
 						<div class="panel-body">
-						  <p>Students must submit at least one of the santhe standardized test score as indicated below. For more detailed information about undergraduate international requirements please visit <a href="http://www.jsu.edu/international/international-admissions/undergraduate.html">International Undergraduate Admissions Checklist</a>&nbsp;</p>
+						  <p>Students must submit at least one of the standardized test score as indicated below. For more detailed information about undergraduate international requirements please <a href="http://www.jsu.edu/international/international-admissions/undergraduate.html" target="_blank">click here</a>&nbsp;</p>
 						</div>
 						<table class="table">
 							<thead>
@@ -740,11 +731,11 @@ Apply									</a>
 						  <p>Official High School Transcript Graduating from a university in a country   where the official language is English. Official University Transcript
 Transferring at least 24 academic credit   hours from accredited US institutions</p>
 						  <p>Exempted Countries: Antigua &amp; Barbuda, Australia, Bahamas, Barbados, Belize, Bermuda,Canada (except   Quebec), Fiji, Grenada, Guyana, Ireland, Jamaica, Kiribat, Marshall Islands, Micronesia, New Zealand, Solomon Island, St. Kitts and Nevis, St. Lucia, St. Vincent and the Grenadines, Trinidad and Tobago, United Kingdom.</p>
+							<p><strong>Not ready to take an English test?</strong></p>
+							<p>If you do not plan on taking English proficiency test and you feel like you need additional help with improving your English, you may want to consider our outstanding ELI program. For more details on ELI program, please <a href="eli.html" target="_self">click here.</a></p>
 					  </div>
 					</div>
 					<!--End Basic Table-->
-							<p>If you do not plan on taking English proficiency test and you feel like you need additional help with improving your English, you may want to consider our outstanding ELI program.</p> <p> For details on ELI program, please click here.</p>
-
 		  </div>
 								<div class="tab-pane fade in" id="Tuition-and-requirements-2">
 									<div class="heading margin-bottom-10">
@@ -807,21 +798,19 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 								</tr>
 							</tbody>
 						</table>
-					</div>
-					<!--End Basic Table-->
-									<p>Living Expenses: Cost of living in this beautiful town of Jacksonville is 3% lower than the Alabama average and 13% lower than the national average. For example, you will be able to rent your own place or live on campus for about $550.00 a month.</p>
-									http://www.areavibes.com/jacksonville-al/cost-of-living/ 
-
-								</div>
+						<div class="panel-body">
+							<p><strong>Living Expenses</strong></p>
+							<p>Cost of living in this beautiful town of Jacksonville is 3% lower than the Alabama average and 13% lower than the national average. For example, you will be able to rent your own place or live on campus for about $550.00 a month. Check the facts on <a href="http://www.areavibes.com/jacksonville-al/cost-of-living/" target="new">AreaVibes</a></p>
+						</div></div>
+					<!--End Basic Table-->				</div>
 									<div class="tab-pane fade in" id="Transfer-2">
 									<div class="heading margin-bottom-10">
 										<h2>Transfer</h2></div>
 									<p>Are you currently enrolled at another institution pursuing your Associate degree or bachelor’s degree program? Let us help you transition to JSU easily. 
-Students in Associate Degree Program: Congratulations for achieving one of the milestone in higher education if you are in a process to complete Associate degree. We are here to help you achieve a second milestone which will be your bachelor’s degree program.</p> 
-<p>Students in Bachelor’s Degree program: We are confident that JSU is the right institutions for you that fit your aspirations and resources. We are here to help you with the timely transfer credits process.</p>
-<p>International College Credit Transfer: In order to be have fair transfer credit hours process, we ask students to provide Evaluated transcripts from one of the credential evaluating companies listed on our webpage: http://www.jsu.edu/international/international-admissions/undergraduate.html</p> <P>We ask for “Course by Course Evaluation report” 
-</p>
-								</div>
+										<h4>Students in Associate Degree Program</h4><p>Congratulations for achieving one of the milestone in higher education if you are in a process to complete Associate degree. We are here to help you achieve a second milestone which will be your bachelor’s degree program.</p> 
+										<p><h4>Students in Bachelor’s Degree program</h4> We are confident that JSU is the right institutions for you that fit your aspirations and resources. We are here to help you with the timely transfer credits process.</p>
+		  								<h4>International College Credit Transfer</h4>
+		  								<p>In order to be have fair transfer credit hours process, we ask students to provide Evaluated transcripts from one of the credential evaluating companies listed on our webpage: http://www.jsu.edu/international/international-admissions/undergraduate.html</p> <P>We ask for “Course by Course Evaluation report”</p></div>
 		  <div class="tab-pane fade in" id="Important-Dates-2">
 									<div class="heading margin-bottom-10">
 										<h2>Important Dates</h2></div>
