--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 						</form>
 					</div>
 				</div>
+			
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-8 col-xs-8">
@@ -144,25 +145,25 @@
 													<div class="row">
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/index-img/JSU ELI.jpg" alt="">
+																<a href="eli.html" target="_self"><img class="img-responsive" src="assets/img/index-img/JSU ELI.jpg" alt="JSU ELI Thumbnail"></a>
 																<h3 class="blog-grid-title-sm"><a href="eli.html">English Language Institute</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/index-img/JSU International-House.jpg" alt="">
+																<a href="ihop.html" target="_self"><img class="img-responsive" src="assets/img/index-img/JSU International-House.jpg" alt="International House Thumbnail"></a>
 																<h3 class="blog-grid-title-sm"><a href="ihop.html">International House Program</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/index-img/JSU Undergraduate.jpg" alt="">
+																<a href="undergraduate.html" target="_self"><img class="img-responsive" src="assets/img/index-img/JSU Undergraduate.jpg" alt="Undergraduate Thumbnail"></a>
 																<h3 class="blog-grid-title-sm"><a href="undergraduate.html">Undergraduate</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 sm-margin-bottom-30">
 															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/index-img/JSU Graduate.jpg" alt="">
+																<a href="graduate.html" target="_self"><img class="img-responsive" src="assets/img/index-img/JSU Graduate.jpg" alt="Graduate Thumbnail"></a>
 																<h3 class="blog-grid-title-sm"><a href="graduate.html">Graduate</a></h3>
 															</div>
 														</div>
