changing testimonials from 3-4

--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ become part of one big Gamecock Family once they come to JSU.
 					</div><!--/end Headline Center-->
 
 					<div class="row">
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img1-sm.jpg" class="rounded-x img-responsive">
 								<h3>No Name</h3>
@@ -648,15 +648,23 @@ become part of one big Gamecock Family once they come to JSU.
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img2-sm.jpg" class="rounded-x img-responsive">
+								<h3>No Name</h3>
+								<span class="color-green">International House</span>
+								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="flat-testimonials-in">
+								<img alt="" src="assets/img/team/img3-sm.jpg" class="rounded-x img-responsive">
 								<h3>No Name</h3>
 								<span class="color-green">Undergraduate</span>
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-sm-3">
 							<div class="flat-testimonials-in">
 								<img alt="" src="assets/img/team/img3-sm.jpg" class="rounded-x img-responsive">
 								<h3>No Name</h3>
