changes to index footer and template

--- a/eli.html
+++ b/eli.html
@@ -812,8 +812,8 @@ Apply									</a>
 						<div class="col-md-3 col-sm-6 column-one md-margin-bottom-50">
 							<a href="index.html"><img class="footer-logo" src="assets/img/logo1-white.png" alt=""></a>
 							<p class="margin-bottom-20">Jacksonville or JSU intl programs description add here</p>
-							<span>Headquarters:</span>
-							<p>International House, 700 Pelham Road North, Jacksonville, AL 36265</p>
+							<span>Address:</span>
+							<p>700 Pelham Road North,<br> International House,<br> Jacksonville, AL 36265</p>
 							<hr>
 							<span>Phone:</span>
 							<p>(+1) 256 782 5303</p>
