--- a/index.html
+++ b/index.html
@@ -522,38 +522,28 @@ Apply									</a>
 
 		<!--=== Content Part ===-->
 		<div class="content-md">
+		<div class="headline-center margin-bottom-60">
+				  <h2>Become A Global Citizen</h2>
+				  <p>Please meet Sari and Jade for a complete introduction from Jacksonville State University programs offered to future incoming international students.</p>
+				</div><!--/end Headline Center-->
 			<div class="container">
 				<div class="row margin-bottom-60">
 					<!-- Owl Carousel v5 -->
-					<div class="col-sm-12 col-md-6 col-lg-6">
-						
-						<div class="md-margin-bottom-40 col-md-offset-0 col-md-12 col-lg-offset-0">
+					<div class="col-sm-12 col-md-12 col-offset-3 col-lg-12">
+						<div class="md-margin-bottom-40 col-md-offset-0 col-md-10 col-lg-8 col-lg-offset-2">
 					<div class="responsive-video">
-						<iframe src="https://www.youtube.com/embed/NG2d5-rauYU" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+						<iframe src="https://www.youtube.com/embed/oZqWtAbe9_w" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 					</div>
 						</div>
 					</div>
 					<!-- End Owl Carousel v5 -->
-					<div class="col-sm-12 col-md-6 col-lg-6">
-						<h1>Become a Global Citizen</h1><br>
-						<p>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
-						fortunate that we get to serve over 200 international students from Europe, Asia, North and South
-							America, Africa, and the Middle East, are enrolled here.</p><p>
-Our goals remain intact which is to always strive to provide you with an environment in which you can
-easily learn and get exposure to American culture, and in which students from Alabama can learn about
-your culture. JSU has shown a long commitment to an international environment on campus with the
-establishment in 1946 of one of the first International House Programs in the country. Today, we are
-						proud to continue this tradition.</p>
-<p>We undoubtedly live in a very globally connected world where we have an absolute obligation to provide
-inter-cultural opportunity to all of our students including yourself. We therefore, seek to continue
-welcoming our international students from all around the world and give you an opportunity to engage
-	with the entire campus while pursuing your academic goals.</p>
-<p>As a former International student, I understand the need for students to feel accepted and cared for. We
-at Jacksonville State University, takes pride in our belief that we are here to serve our students. We serve
-each individual students with respect and care no matter where they come from. All of our students
-become part of one big Gamecock Family once they come to JSU.
-	I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director International Programs<br>Jacksonville State University</p><br>
-						<a href="#Programs"><button class="btn-u text-uppercase" type="button">Our Programs</button></a>
+					<div class="col-sm-12 col-md-6 col-lg-6 col-lg-offset-3">
+	<div class="headline-center margin-bottom-60">
+				</div><!--/end Headline Center-->
+				<a href="#Programs"><button class="btn-u text-uppercase" type="button">ELI</button></a>
+				<a href="#Programs"><button class="btn-u text-uppercase" type="button">International House</button></a>
+				<a href="#Programs"><button class="btn-u text-uppercase" type="button">Undergraduate</button></a>
+				<a href="#Programs"><button class="btn-u text-uppercase" type="button">Graduate</button></a>
 					</div>
 				</div><!--/end row-->
 			</div><!--/end container-->
@@ -597,8 +587,8 @@ become part of one big Gamecock Family once they come to JSU.
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">English Language Institue</h3>
+							<p>Ready to laern and pracitce your English skills. At ELI, you will enjoy a college experience before you start college! <a href="eli.html" title="ELI JSU Program" target="_self">Learn more</a></p>
 						</div>
-						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet </p>
 					</li>
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="ihop.html" title="International House Program" class="thumbnail">
@@ -607,7 +597,7 @@ become part of one big Gamecock Family once they come to JSU.
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">International House Program</h3>
 						</div>
-						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet </p>
+						<p>A home away from home. The International House Program for 70+ years has been the hub for internationalism at JSU bringing international and Americans scholars to bind together. <a href="ihop.html" title="International House Program" target="_self">Learn more</a></p>
 					</li>
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="undergraduate.html" title="Project Three" class="thumbnail">
@@ -616,16 +606,16 @@ become part of one big Gamecock Family once they come to JSU.
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">Undergraduate</h3>
 						</div>
-						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet </p>
+						<p>At JSU we welcome students from all around the world and serve as the backbone for a succesfull career. With all acreddited schools we are confident that JSU is the best choice to start a career. <a href="undergraduate.html" title="Learn more about undergraduate programs at JSU" target="_self">Learn more</a> </p>
 					</li>
 					<li class="col-sm-6">
 						<a href="graduate.html" title="Project Three" class="thumbnail">
-							<img alt="" src="assets/img/index-img/JSU Graduate.jpg" class="full-width img-responsive">
+						<img alt="" src="assets/img/index-img/JSU Graduate.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">Graduate</h3>
 						</div>
-						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet </p>
+						<p>Ready for the next step into your professional career. Become the next leader in your industry by shaping your skillsets with many of our programs from arts, health, science and business.  <a href="graduate.html" title="Learn more about undergraduate programs at JSU" target="_self">Learn more</a></p>
 					</li>
 				</ul>
 				<!-- End Portfolio Box -->
@@ -640,42 +630,60 @@ become part of one big Gamecock Family once they come to JSU.
 					</div><!--/end Headline Center-->
 
 					<div class="row">
-						<div class="col-sm-3">
+						<div class="col-sm-3 col-md-6 col-lg-3">
 							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img1-sm.jpg" class="rounded-x img-responsive">
-								<h3>No Name</h3>
+								<h3>Ahmed Albloushi</h3>
 								<span class="color-green">English Language Institute</span>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
+								<p>After a few more months of studying I passed the IELTS exam and was able to continue my studies at the university </p><a href="#" title="" target="new">Read More</a>
 							</div>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-sm-3 col-md-6 col-lg-3">
 							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img2-sm.jpg" class="rounded-x img-responsive">
-								<h3>No Name</h3>
+								<h3>Vasila Nuralieva</h3>
 								<span class="color-green">International House</span>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
+								<p>Every resident is so different, with diverse backgrounds and cultures; it makes us special and it unites us.</p><a href="#" title="" target="new">Read More</a>
 							</div>
 						</div>
-						<div class="col-sm-3">
-							<div class="flat-testimonials-in">
+						<div class="col-sm-3 col-md-6 col-lg-3">
+							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img3-sm.jpg" class="rounded-x img-responsive">
 								<h3>No Name</h3>
 								<span class="color-green">Undergraduate</span>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
+								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p><a href="#" title="" target="new">Read More</a>
 							</div>
 						</div>
-						<div class="col-sm-3">
-							<div class="flat-testimonials-in">
-								<img alt="" src="assets/img/team/img3-sm.jpg" class="rounded-x img-responsive">
+						<div class="col-sm-3 col-md-6 col-lg-3">
+							<div class="flat-testimonials-in md-margin-bottom-50">
+								<img alt="" src="assets/img/team/img4-sm.jpg" class="rounded-x img-responsive">
 								<h3>No Name</h3>
 								<span class="color-green">Graduate</span>
-								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
+								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p><a href="#" title="" target="new">Read More</a>
 							</div>
 						</div>
 					</div><!--/end row-->
 				</div><!--/end container-->
 			</div>
 			<!-- End Flat Testimonials -->
+				<div class="bg-color-light">
+				<div class="container content-sm">
+					<div class="row">
+						<div class="col-md-6 cold-md-offset-2 md-margin-bottom-10 col-lg-offset-1 col-lg-5">
+							<img alt="" src="assets/img/index-img/Chandni-Khadka.jpg" class="img-responsive">
+						</div>
+						<div class="col-md-6">
+							<br><br><br>
+							<div class="headline-left margin-bottom-30">
+							  <h2 class="headline-brd">A message from our Director</h2>
+							  <h4>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
+fortunate that we get to serve over 200 international students from Europe, Asia, North and South America, Africa, and the Middle East, are enrolled here...</h4>
+						  </div>
+							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html">Click to continue</a>
+						</div><!--/end row-->
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- End Content Part -->
  
@@ -690,8 +698,8 @@ become part of one big Gamecock Family once they come to JSU.
 						<div class="col-md-3 col-sm-6 column-one md-margin-bottom-50">
 							<a href="index.html"><img class="footer-logo" src="assets/img/logo1-white.png" alt=""></a>
 							<p class="margin-bottom-20">Jacksonville or JSU intl programs description add here</p>
-							<span>Headquarters:</span>
-							<p>International House, 700 Pelham Road North, Jacksonville, AL 36265</p>
+							<span>Address:</span>
+							<p>700 Pelham Road North,<br> International House,<br> Jacksonville, AL 36265</p>
 							<hr>
 							<span>Phone:</span>
 							<p>(+1) 256 782 5303</p>
