changes made to the style guide

--- a/eli.html
+++ b/eli.html
@@ -718,7 +718,28 @@ Apply									</a>
 								<div class="tab-pane fade in" id="ApplyNow-2">
 									<div class="heading margin-bottom-10">
 										<h2>Apply Now</h2></div>
-									<p>Ask us questions, check out our Facebook page, and when you are ready to apply, start here: http://www.jsu.edu/eli/apply.html </p>
+									<h4>Before you apply, make sure you have the following</h4>
+
+									<ul><li>Have an personal email address.</li>
+
+										<li>Have a valid passport, and a copy of the photo page</li>
+
+										<li>You will need $35 for an application fee</li>
+
+										<li>Select your sessions to prepare the amount that you are planning to study English and issue an 1-20 </li>
+
+										<li>Calculate cost and make sure to include all possible expenses for your stay at the ELI program. You will be required to evidence of funding.</li>
+
+										<li>A bank statement it must be yours and sponsoring relative’s, it must show at total balance, and it must be recent.</li></ul>
+
+										<h4>When you are ready you will</h4> 
+
+									<ol><li><p><strong>Apply online</strong>
+										fill out application or ELI students. Be sure that your name of and date of birth are the same as on your passport.</p></li>
+
+										<li><p><strong>Email documents</strong> email your passport and bank statement documents to eli@jsu.edu</p></li></ol>
+
+									<p>For more detail information about the application process <a href="http://www.jsu.edu/eli/apply.html" atl="" title="ELI Apply" target="new">click here</a></p>
 		  </div>
 				
 		</div>
@@ -800,7 +821,7 @@ Apply									</a>
 			</div>
 			<!-- End of Pagination -->
 		</div>
-			</div><!--/container-->
+<!--/container-->
  <!-- InstanceEndEditable -->
 	
 	<!-- InstanceBeginRepeat name="RepeatRegion1" --><!-- InstanceBeginRepeatEntry -->
