--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 					  <h3>email us at <strong class="color-darker">intladmissions@jsu.edu</strong> or give us a call at <strong class="color-darker">+1 (256) 782 5303</strong></h3>
 					</div>
 					<div class="call-action-v1-in inner-btn page-scroll">
-						<a href="#portfolio" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Apply Today</a>
+						<a href="apply.html" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Apply Today</a>
 					</div>
 				</div>
 			</div>
