--- a/undergraduate.html
+++ b/undergraduate.html
@@ -362,7 +362,7 @@
 <div class="row margin-bottom-40">
 				<div class="col-md-8 md-margin-bottom-40 col-lg-offset-2 col-md-offset-2">
 					<div class="responsive-video">
-						<iframe src="http://player.vimeo.com/video/9679622" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+						<iframe src="https://www.youtube.com/embed/rOttnVHsHGA" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 					</div>
 				</div>
 		  </div><!--/row-->
@@ -433,7 +433,7 @@
 		<!--=== Schools Gallery Part ===-->
 <div class="heading margin-bottom-10"><h2>JSU Undergraduate Schools</h2></div>		
 		<p>Through our six undergraduate academic schools JSU’s mission is to provide distinctive educational, cultural and social experiences for a diverse student population. As a learning-centered university, Jacksonville State University strives to challenge students academically in a responsive environment, meeting students' educational, career and personal goals while seeking to produce broadly-educated graduates that are prepared for global engagement.</p>
-		<p>For complete degree listing, <a target="_blank" href="#">click here.</a></p>
+		<p>For complete degree listing, <a target="_blank" href="degree-listing-undergraduate.html">click here.</a></p>
 		
 		<!--=== End Content Part ===-->
 		<!--=== Featured Undergraduate Majors ===-->
