update link for stories

--- a/ihop.html
+++ b/ihop.html
@@ -450,7 +450,7 @@
 									<div class="overflow-hidden">
 										<img class="img-responsive" src="assets/img/main/vasila.jpg" alt="" />
 									</div>
-									<a class="btn-more hover-effect" href="#">read more +</a>
+									<a class="btn-more hover-effect" href="stories/index.html">read more +</a>
 								</div>
 								<div class="caption">
 								  <h3><a class="hover-effect" href="#">Vasila Nuralieva</a></h3>
