--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 								<img alt="" src="assets/img/team/img2-sm.jpg" class="rounded-x img-responsive">
 								<h3>Vasila Nuralieva</h3>
 								<span class="color-green">International House</span>
-								<p>Every resident is so different, with diverse backgrounds and cultures; it makes us special and it unites us.</p><a href="#" title="" target="new">Read More</a>
+								<p>Every resident is so different, with diverse backgrounds and cultures; it makes us special and it unites us.</p><a href="stories/index.html" title="" target="new">Read More</a>
 							</div>
 						</div>
 						<div class="col-sm-3 col-md-6 col-lg-3">
