changes on the footer

--- a/undergraduate.html
+++ b/undergraduate.html
@@ -57,7 +57,7 @@
 							<div class="topbar-toggler"><span class="fa fa-angle-down"></span></div>
 							<ul class="topbar-list topbar-menu">
 								<li><a href="#">Contact</a></li>
-								<li><a href="#">FAQ</a></li>
+								<li><a href="faq.html">FAQ</a></li>
 								<li><a href="#">Calendar</a></li>
 								<li>
 									<a href="javascript:void(0);">More</a>
@@ -739,15 +739,15 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 						</div>
 
 						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
+							<!--
 							<h2>Tags</h2>
-							<!-- Tag Links v4 -->
 							<ul class="tags-v4 margin-bottom-40">
 								<li><a class="rounded-4x" href="#">Business</a></li>
 								<li><a class="rounded-4x" href="#">Education</a></li>
 								<li><a class="rounded-4x" href="#">Web</a></li>
 								<li><a class="rounded-4x" href="#">Entrepreneurship</a></li>
 							</ul>
-							<!-- End Tag Links v4 -->
+							-->
 
 							<h2>Useful Links</h2>
 							<!-- Footer Lists -->
