--- a/degree-listing-graduate.html
+++ b/degree-listing-graduate.html
@@ -57,7 +57,7 @@
 							<div class="topbar-toggler"><span class="fa fa-angle-down"></span></div>
 							<ul class="topbar-list topbar-menu">
 								<li><a href="#">Contact</a></li>
-								<li><a href="#">FAQ</a></li>
+								<li><a href="faq.html">FAQ</a></li>
 								<li><a href="#">Calendar</a></li>
 								<li>
 									<a href="javascript:void(0);">More</a>
@@ -320,7 +320,7 @@
 															<h2>Degree Listing</h2>
 															<ul class="dropdown-link-list">
 																<li><a href="degree-listing-undergraduate.html">Undergraduate</a></li>
-																<li><a href="#">Graduate</a></li>
+																<li><a href="degree-listing-graduate.html">Graduate</a></li>
 															</ul>
 														</div>
 													</div>
@@ -477,15 +477,15 @@
 						</div>
 
 						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
+							<!--
 							<h2>Tags</h2>
-							<!-- Tag Links v4 -->
 							<ul class="tags-v4 margin-bottom-40">
 								<li><a class="rounded-4x" href="#">Business</a></li>
 								<li><a class="rounded-4x" href="#">Education</a></li>
 								<li><a class="rounded-4x" href="#">Web</a></li>
 								<li><a class="rounded-4x" href="#">Entrepreneurship</a></li>
 							</ul>
-							<!-- End Tag Links v4 -->
+							-->
 
 							<h2>Useful Links</h2>
 							<!-- Footer Lists -->
