--- a/apply.html
+++ b/apply.html
@@ -483,18 +483,18 @@
 							<h2>Useful Links</h2>
 							<!-- Footer Lists -->
 							<ul class="footer-lists">
-								<li><i class="fa fa-angle-right"></i><a href="#">About JSU</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">ELI</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">International House</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">Undergraduate</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">Graduate</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="about.html">About JSU</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="eli.html">ELI</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="ihop.html">International House</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="undergraduate.html">Undergraduate</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="graduate.html">Graduate</a></li>
 							</ul>
 							<!-- End Footer Lists -->
 						</div>
-
+<!-- Latest News
 						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
 							<h2>Latest Stories</h2>
-							<!-- Latest News -->
+							
 							<div class="latest-news margin-bottom-20">
 								<img src="assets/img/thumb/01.jpg" alt="">
 								<h3><a href="#">Standard post</a></h3>
@@ -516,8 +516,8 @@
 								<h3><a href="#">Standard</a></h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
-							<!-- End Latest News -->
-						</div>
+						</div>							End Latest News -->
+
 
 						<div class="col-md-3 col-sm-6">
 							<h2>Newsletter</h2>
