--- a/index.html
+++ b/index.html
@@ -592,10 +592,10 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 							</ul>
 							<!-- End Footer Lists -->
 						</div>
-
+<!-- Latest News
 						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
 							<h2>Latest Stories</h2>
-							<!-- Latest News -->
+							
 							<div class="latest-news margin-bottom-20">
 								<img src="assets/img/thumb/01.jpg" alt="">
 								<h3><a href="#">Standard post</a></h3>
@@ -617,8 +617,8 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 								<h3><a href="#">Standard</a></h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
-							<!-- End Latest News -->
-						</div>
+						</div>							End Latest News -->
+
 
 						<div class="col-md-3 col-sm-6">
 							<h2>Newsletter</h2>
