--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 							<span>Email Address:</span>
 							<a href="#">intladmissions@jsu.edu</a>
 						</div>
+						-->
 
 						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
 							<!--
@@ -584,11 +585,11 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 							<h2>Useful Links</h2>
 							<!-- Footer Lists -->
 							<ul class="footer-lists">
-								<li><i class="fa fa-angle-right"></i><a href="#">About JSU</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">ELI</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">International House</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">Undergraduate</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">Graduate</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="about.html">About JSU</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="eli.html">ELI</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="ihop.html">International House</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="undergraduate.html">Undergraduate</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="graduate.html">Graduate</a></li>
 							</ul>
 							<!-- End Footer Lists -->
 						</div>
