--- a/degree-listing-graduate.html
+++ b/degree-listing-graduate.html
@@ -465,6 +465,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-6 column-one md-margin-bottom-50">
 							<a href="index.html"><img class="footer-logo" src="assets/img/logo1-white.png" alt=""></a>
+							<!--
 							<p class="margin-bottom-20">Jacksonville or JSU intl programs description add here</p>
 							<span>Address:</span>
 							<p>700 Pelham Road North,<br> International House,<br> Jacksonville, AL 36265</p>
@@ -474,9 +475,8 @@
 						  <hr>
 							<span>Email Address:</span>
 							<a href="#">intladmissions@jsu.edu</a>
-						</div>
-						-->
-
+							-->
+						</div> 
 						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
 							<!--
 							<h2>Tags</h2>
@@ -538,8 +538,10 @@
 									<button type="button" class="btn-u input-btn">Subscribe</button>
 								</div>
 							</div>
+						</div>
 							<!-- End Form Group -->
 
+						<div class="col-md-3 col-sm-6">
 							<h2>Social Network</h2>
 							<p><strong>Follow Us</strong> If you want to be kept up to date about what’s going on, minute by minute!</p>
 							<br>
