--- a/index.html
+++ b/index.html
@@ -480,16 +480,15 @@
 						<p>Ready for the next step into your professional career. Become the next leader in your industry by shaping your skillsets with many of our programs from arts, health, science and business.  <a href="graduate.html" title="Learn more about undergraduate programs at JSU" target="_self">Learn more</a></p>
 					</li>
 				</ul>
-				<!-- End Portfolio Box -->
-			</div><!--/end container-->
-
-			<!-- Flat Testimonials -->
-			<div class="flat-testimonials bg-image-v1 parallaxBg1 margin-bottom-60" style="background-position: 50% 241px;">
+			</div>
+				<!-- End Programs --->
+			<!-- Testimonails ---
+						<div class="flat-testimonials bg-image-v1 parallaxBg1 margin-bottom-60" style="background-position: 50% 241px;">
 				<div class="container">
 					<div class="headline-center headline-light margin-bottom-60">
 						<h2>What our Students Are Saying</h2>
 						<p>Can you imagine yourself here? Learn about our students stories</p>
-					</div><!--/end Headline Center-->
+					</div>
 
 					<div class="row">
 						<div class="col-sm-3 col-md-6 col-lg-3">
@@ -524,10 +523,10 @@
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p><a href="#" title="" target="new">Read More</a>
 							</div>
 						</div>
-					</div><!--/end row-->
-				</div><!--/end container-->
+					</div>
+				</div>
 			</div>
-			<!-- End Flat Testimonials -->
+			 End Flat Testimonials -->
 				<div class="bg-color-light">
 				<div class="container content-sm">
 					<div class="row">
@@ -547,7 +546,7 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 				</div>
 			</div>
 		</div>
-		<!-- End Content Part -->
+		<!-- End Testimonials Part -->
  
 <!-- InstanceEndEditable -->
 	
